--- a/src/sample/display.fxml
+++ b/src/sample/display.fxml
@@ -8,15 +8,15 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.GridPane?>
 
-<AnchorPane prefHeight="378.0" prefWidth="604.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="sample.displayController">
+<AnchorPane prefHeight="494.0" prefWidth="754.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="sample.displayController">
   <children>
-    <SplitPane dividerPositions="0.4335548172757475" focusTraversable="true" layoutX="0.0" layoutY="24.0" prefHeight="363.0" prefWidth="604.0">
+    <SplitPane dividerPositions="0.44680851063829785" focusTraversable="true" layoutX="0.0" layoutY="24.0" prefHeight="470.0" prefWidth="754.0">
       <items>
         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="360.0" prefWidth="258.0">
           <children>
-            <GridPane layoutX="0.0" layoutY="0.0" prefHeight="361.0" prefWidth="258.0000999999975">
+            <GridPane layoutX="0.0" layoutY="0.0" prefHeight="461.0" prefWidth="333.0">
               <children>
-                <Button fx:id="trafficBut" minHeight="30.0" minWidth="112.0" mnemonicParsing="false" text="Traffic Stats" GridPane.columnIndex="0" GridPane.halignment="CENTER" GridPane.rowIndex="0" />
+                <Button fx:id="trafficBut" minHeight="30.0" minWidth="112.0" mnemonicParsing="false" onAction="#trafficBut" text="Traffic Stats" GridPane.columnIndex="0" GridPane.halignment="CENTER" GridPane.rowIndex="0" />
                 <Button minHeight="30.0" minWidth="112.0" mnemonicParsing="false" text="TCP Flag Stats" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="0" />
                 <Button minHeight="30.0" minWidth="112.0" mnemonicParsing="false" text="Client Ports" GridPane.columnIndex="0" GridPane.halignment="CENTER" GridPane.rowIndex="1" />
                 <Button minHeight="30.0" minWidth="112.0" mnemonicParsing="false" text="Server Ports" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" />
@@ -37,12 +37,12 @@
         </AnchorPane>
         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="360.0" prefWidth="339.0">
           <children>
-            <ListView fx:id="listView" layoutX="0.0" layoutY="0.0" prefHeight="362.0" prefWidth="338.0000999999975" />
+            <ListView fx:id="listView" layoutX="0.0" layoutY="0.0" prefHeight="468.0" prefWidth="413.0" />
           </children>
         </AnchorPane>
       </items>
     </SplitPane>
-    <MenuBar layoutX="-1.0" layoutY="0.0" prefWidth="605.0">
+    <MenuBar layoutX="-1.0" layoutY="2.0" minHeight="22.0" prefHeight="22.0" prefWidth="755.0">
       <menus>
         <Menu mnemonicParsing="false" text="File">
           <items>
