--- a/src/sample/display.fxml
+++ b/src/sample/display.fxml
@@ -17,8 +17,8 @@
             <GridPane layoutX="0.0" layoutY="0.0" prefHeight="461.0" prefWidth="333.0">
               <children>
                 <Button fx:id="trafficBut" minHeight="30.0" minWidth="112.0" mnemonicParsing="false" onAction="#trafficBut" text="Traffic Stats" GridPane.columnIndex="0" GridPane.halignment="CENTER" GridPane.rowIndex="0" />
-                <Button minHeight="30.0" minWidth="112.0" mnemonicParsing="false" text="TCP Flag Stats" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="0" />
-                <Button minHeight="30.0" minWidth="112.0" mnemonicParsing="false" text="Client Ports" GridPane.columnIndex="0" GridPane.halignment="CENTER" GridPane.rowIndex="1" />
+                <Button fx:id="TCPFlagBut" minHeight="30.0" minWidth="112.0" mnemonicParsing="false" onAction="#TCPFlagBut" text="TCP Flag Stats" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="0" />
+                <Button fx:id="clientBut" minHeight="30.0" minWidth="112.0" mnemonicParsing="false" onAction="#clientBut" text="Client Ports" GridPane.columnIndex="0" GridPane.halignment="CENTER" GridPane.rowIndex="1" />
                 <Button minHeight="30.0" minWidth="112.0" mnemonicParsing="false" text="Server Ports" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" />
                 <Button minHeight="30.0" minWidth="112.0" mnemonicParsing="false" text="Image Extensions" GridPane.columnIndex="0" GridPane.halignment="CENTER" GridPane.rowIndex="2" />
                 <Button fx:id="graphBut" minHeight="30.0" minWidth="112.0" mnemonicParsing="false" onAction="#graphBut" text="Graph" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2" />
