--- a/src/sample/display.fxml
+++ b/src/sample/display.fxml
@@ -21,7 +21,7 @@
                 <Button fx:id="clientBut" minHeight="30.0" minWidth="112.0" mnemonicParsing="false" onAction="#clientBut" text="All Ports" GridPane.columnIndex="0" GridPane.halignment="CENTER" GridPane.rowIndex="1" />
                 <Button fx:id="imgBut" minHeight="30.0" minWidth="112.0" mnemonicParsing="false" onAction="#imgBut" text="Image Extensions" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" />
                 <Button fx:id="graphBut" minHeight="30.0" minWidth="112.0" mnemonicParsing="false" onAction="#graphBut" text="Graph IP" GridPane.columnIndex="0" GridPane.halignment="CENTER" GridPane.rowIndex="2" />
-                <Button id="" minHeight="30.0" minWidth="112.0" mnemonicParsing="false" text="Save to txt" textFill="WHITE" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2" />
+                <Button id="" fx:id="savetxtBut" minHeight="30.0" minWidth="112.0" mnemonicParsing="false" onAction="#savetxtBut" text="Save to txt" textFill="WHITE" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2" />
               </children>
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -46,7 +46,8 @@
       <menus>
         <Menu mnemonicParsing="false" text="File">
           <items>
-            <MenuItem mnemonicParsing="false" text="Close" />
+            <MenuItem mnemonicParsing="false" text="Save" />
+            <MenuItem mnemonicParsing="false" onAction="#fileClose" text="Close" fx:id="fileClose" />
           </items>
         </Menu>
         <Menu mnemonicParsing="false" text="Help">
