FUCK TABS eat dodods

--- a/src/main.css
+++ b/src/main.css
@@ -1,3 +1,11 @@
 /*
  * main.css
  */
+.button{
+    -fx-background-color:
+        #3c7fb1,
+        linear-gradient(#fafdfe, #e8f5fc),
+        linear-gradient(#eaf6fd 0%, #d9f0fc 49%, #bee6fd 50%, #a7d9f5 100%);
+    -fx-background-insets: 0,1,2;
+    -fx-text-fill: black;
+}
